--- a/apps/admin/media/themes/default/style.css
+++ b/apps/admin/media/themes/default/style.css
@@ -1,3 +1,3 @@
 body { margin: 0; }
-#userbar { width: 100%; height: 23px; margin: 0; padding: 0; }
+#userbar { width: 100%; height: 23px; margin: 0; padding: 0; border-bottom: 1px solid #555; }
 
